# zygoat-django

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  drf.rst  environment.rst  index.rst  introduction.rst  usage.rst  watch.sh
docs/usage/: advanced.rst  caveats.rst  commands.rst  index.rst  middleware.rst  recommended.rst
tests/: test_zygoat_django.py
tests/middleware/: conftest.py  test_session_expiration_middleware.py
zygoat_django/: __init__.py  exceptions.py
zygoat_django/settings/: environment.py
