[tool.poetry]
name = "zygoat-django"
version = "0.1.0"
description = ""
authors = ["Mark Rawls <markrawls96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8-black = "^0.2.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 95
target-version = ['py37']
